fix vertical line errors on mobile

--- a/static/style_test.css
+++ b/static/style_test.css
@@ -1078,7 +1078,7 @@ hr {
 
 	.wrapper {
 		margin: 1.5vh;
-		min-height: 96vh;
+		min-height: 97vh;
 	}
 
 	.header .site-title {
@@ -1170,7 +1170,7 @@ hr {
 	}
 
 	.v1 {
-		height: 84vh;
+		height: 85vh;
 		margin-left: 9.8%;
 	}
 
@@ -1188,7 +1188,7 @@ hr {
 	}
 
 	.v5 {
-		height: 84vh;
+		height: 85vh;
 		margin-left: 90%;
 	}
 	
